added CICAD_POLARITY define, moved cicad_send_byte to a separate file, started working on cicad_send_message

--- a/firmware/msp430/Makefile
+++ b/firmware/msp430/Makefile
@@ -14,7 +14,7 @@ GDBTUI = $(GDB)tui
 # Uncomment the following to enable debugging
 CFLAGS += -g -DDEBUG
 
-OBJS=$(PROG).o cicad_physical.o
+OBJS=$(PROG).o cicad_physical.o cicad.o
 
 all: $(PROG).elf  $(PROG).lst
 	$(SIZE) $(PROG).elf
