did some improvements in the physical layer with the init_timer and RESET_TIMER, made a simple cicad_send_message work

--- a/firmware/msp430/Makefile
+++ b/firmware/msp430/Makefile
@@ -12,7 +12,7 @@ GDB = msp430-gdb
 GDBTUI = $(GDB)tui
 
 # Uncomment the following to enable debugging
-CFLAGS += -g -DDEBUG
+#CFLAGS += -g -DDEBUG
 
 OBJS=$(PROG).o cicad_physical.o cicad.o
 
